[package]
name = "leaf-tokio"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
leaf-core.workspace = true
# The thin stereotype macros: `TokioExecutionFacility` is registered as the primary
# `applicationTaskExecutor` via `#[component(role = "infrastructure", name = "..")]`
# — the macro emits the Descriptor (-> COMPONENTS) + ProviderSeed (-> SEED_PAIRINGS)
# the same maximal-magic way a user bean is registered (no hand-written const block).
leaf-macros.workspace = true
# The timer-backed `Sleeper` impl (`TokioSleeper`) implements leaf-resilience's
# runtime-agnostic `Sleeper` seam over `tokio::time::sleep`. The dependency
# direction is leaf-tokio -> leaf-resilience (the runtime crate implements the
# abstract seam); leaf-resilience depends on leaf-tokio only as a DEV-dependency
# (its integration test), so this is NOT a build cycle.
leaf-resilience.workspace = true
futures.workspace = true
once_cell.workspace = true

[dependencies.tokio]
workspace = true
features = ["rt-multi-thread", "macros", "time", "sync", "signal", "fs", "io-util"]

[dev-dependencies]
tokio = { workspace = true, features = ["rt-multi-thread", "macros", "time", "sync", "signal", "fs", "io-util", "test-util"] }
