[package]
name = "leaf-web-hyper"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
# leaf-web-hyper is THE backend crate — the ONE crate in the workspace allowed to
# name hyper/tower/axum. It implements the leaf-web `WebServer` trait at the HTTP
# transport edge, converting hyper's native request/response to/from the leaf
# `Request`/`Response` so nothing above it ever sees hyper. Everything else stays
# backend-free.
leaf-core.workspace = true
leaf-web.workspace = true
# The shared executor: serving runs on the leaf-tokio runtime (Task 12 resolves the
# default `WebServer` as a FALLBACK auto-config bean over it).
leaf-tokio.workspace = true
# The thin stereotype macros — `#[async_impl]` desugars the `WebServer::serve` body
# into the `BoxFuture` form the `dyn WebServer` trait requires (no hand-written
# `Box::pin(async move { .. })`).
leaf-macros.workspace = true
# The hyper 1.x HTTP/1 server + hyper-util's auto/Tokio glue (the executor + IO
# adapters + the protocol-negotiating connection builder), http-body-util to
# collect/emit a full body, bytes for the body carrier.
hyper = { workspace = true, features = ["server", "http1", "http2"] }
# `server-graceful` adds hyper-util's `GracefulShutdown` connection tracker — the drain
# half of the embedded-server lifecycle: it signals every watched connection to finish and
# awaits them (bounded by the grace budget) when the shutdown signal fires.
hyper-util = { workspace = true, features = ["server", "server-auto", "server-graceful", "tokio", "http1", "http2"] }
http-body-util.workspace = true
# The http-body 1.x trait — read hyper `Incoming` frames (data + trailers) for the
# inbound stream and IMPLEMENT a streaming body for the outbound frame stream. Pure HTTP
# value layer (not a server), the sanctioned place to name it: this IS the backend edge.
http-body.workspace = true
# `futures` builds the `leaf_core::BoxStream` the leaf `Body::Stream` carries at this edge.
futures.workspace = true
bytes.workspace = true
# The neutral HTTP value vocabulary (StatusCode for the bare-500 fallback). The leaf
# `Request`/`Response` already carry `http` Method/Uri/HeaderMap; this names it directly
# for the fallback path.
http.workspace = true
# The raw tokio runtime primitives the backend binds/accepts on: the TcpListener + the
# per-connection task spawn run on the leaf-tokio executor's ambient runtime, plus `time`
# for the grace-bounded `tokio::time::timeout` around the graceful drain. (leaf-tokio owns
# the FACILITY; the transport edge needs the bare net/rt/time API here.)
tokio = { workspace = true, features = ["rt", "net", "time"] }

[dev-dependencies]
# The integration test (`tests/serves_http.rs`) boots a real `HyperServer` on an
# ephemeral port and drives real HTTP through it with a reqwest client, asserting
# routing + a filter + advice end to end.
tokio = { workspace = true, features = ["rt-multi-thread", "macros", "net", "time"] }
# `http2` enables the client's `http2_prior_knowledge()` for the h2 edge round-trip test
# (still no TLS — plaintext h2c on localhost).
reqwest = { workspace = true, default-features = false, features = ["http2"] }
http.workspace = true
# The auto-config proof (`tests/auto_config_server.rs`) boots a REAL leaf app IN-PROCESS:
# leaf-boot's run pipeline auto-collects the `#[auto_config]` FALLBACK `dyn WebServer`
# (this crate) + the leaf-web `EmbeddedWebServer` `#[keep_alive]` + a `#[rest_controller]`,
# spawns the keep-alive's `serve` onto the lifecycle machinery, and the endpoint responds
# over real HTTP — plus the lifecycle proofs (AcceptingTraffic-while-serving, a plain
# `#[runner]` not starved, clean drain). leaf-tokio supplies the run-pipeline spawner +
# drain-sleeper; leaf-serde's JSON converter serializes the controller return.
leaf-boot.workspace = true
leaf-tokio.workspace = true
leaf-serde.workspace = true
serde = { workspace = true }
# The `autoconfig.rs` unit tests drive the real `run_autoconfig` ladder and assert the
# OnMissingBean(dyn WebServer) back-off — `leaf-conditions` names the `OnMissingBean` kind
# the guard leaf carries (the same back-off proof leaf-cache/leaf-tx run for their defaults).
leaf-conditions.workspace = true
