[package]
name = "leaf-web"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
# leaf-web is the ABSTRACTION crate (leaf-core only, like leaf-cache/leaf-tx
# define their concern traits). It names NO HTTP-server library — hyper/tower/
# axum live exclusively in the leaf-web-hyper backend crate (Stage 3).
leaf-core.workspace = true
# Neutral, server-agnostic HTTP value vocabulary (Method/StatusCode/HeaderMap/
# Uri) — the ecosystem standard hyper/axum/tonic all build on; NOT server internals.
http.workspace = true
# The body carrier — a cheaply-cloneable byte buffer at the request/response edge.
bytes.workspace = true
# The object-safety boundary for `HttpMessageConverter`: it lets a converter be a
# `dyn` bean (serialize `&dyn erased_serde::Serialize`, yield a `dyn Deserializer`)
# with no generic method on the trait object. NOT a serde adoption into the abstraction
# surface — leaf-web names no serde data format; the JSON impl lives in leaf-serde. This
# is the serialization analogue of the neutral `http` value-vocabulary exception.
erased-serde.workspace = true

[dev-dependencies]
# The `#[cfg(test)]` fake filters/terminal write their around-advice bodies as
# native `async fn` via #[async_impl] (no cycle: leaf-macros -> leaf-codegen ->
# leaf-core; leaf-web -> leaf-core). The lone Stage-1 hand-written impls.
leaf-macros.workspace = true
# A minimal `block_on` to drive the async filter chain in unit tests — no runtime.
futures.workspace = true
