[package]
name = "leaf-web"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
# leaf-web is the ABSTRACTION crate (leaf-core only, like leaf-cache/leaf-tx
# define their concern traits). It names NO HTTP-server library — hyper/tower/
# axum live exclusively in the leaf-web-hyper backend crate (Stage 3).
leaf-core.workspace = true
# Neutral, server-agnostic HTTP value vocabulary (Method/StatusCode/HeaderMap/
# Uri) — the ecosystem standard hyper/axum/tonic all build on; NOT server internals.
http.workspace = true
# The body carrier — a cheaply-cloneable byte buffer at the request/response edge.
bytes.workspace = true
# The object-safety boundary for `HttpMessageConverter`: it lets a converter be a
# `dyn` bean (serialize `&dyn erased_serde::Serialize`, yield a `dyn Deserializer`)
# with no generic method on the trait object. NOT a serde adoption into the abstraction
# surface — leaf-web names no serde data format; the JSON impl lives in leaf-serde. This
# is the serialization analogue of the neutral `http` value-vocabulary exception.
erased-serde.workspace = true

[features]
# The in-memory `MockServer` test harness (`src/testing.rs`). Gated so it is never
# production surface; leaf-web's own integration tests enable it via the self
# dev-dependency below (`leaf-web = { path = ".", features = ["testing"] }`), the
# canonical Cargo idiom for a package to compile its own test-only API into its
# integration-test crates. External consumers opt in with `features = ["testing"]`.
testing = []

[dev-dependencies]
# The `#[cfg(test)]` fake filters/terminal write their around-advice bodies as
# native `async fn` via #[async_impl] (no cycle: leaf-macros -> leaf-codegen ->
# leaf-core; leaf-web -> leaf-core). The lone Stage-1 hand-written impls.
leaf-macros.workspace = true
# A minimal `block_on` to drive the async filter chain in unit tests — no runtime.
futures.workspace = true
# The DI-assembly proof (`tests/dispatch_through_mock.rs`): leaf-boot's cold-pass
# `App::from_slices` lifts the test's macro-emitted `#[component]`/`#[bean]` seeds,
# freezes an engine, and the test resolves `Vec<Ref<dyn Route>>`/`WebFilter`/
# `ControlAdvice` by collection + by-trait injection — the same path the Stage-3
# `WebServerRunner` will use. Dev-only: leaf-web's production deps stay leaf-core + http.
leaf-boot.workspace = true
# Self dev-dependency with the `testing` feature ON, so the integration tests (which
# compile leaf-web as a normal dependency, where `cfg(test)` is off) still see the
# `MockServer` harness. The standard Cargo idiom for a test-only public surface.
leaf-web = { path = ".", features = ["testing"] }
# The Task-9 controller-codegen proof (`tests/controller_routes.rs`) boots a real
# `#[rest_controller]` whose generated `Route` beans serialize returns through the JSON
# `HttpMessageConverter` (`leaf-serde`'s `JsonConverter` bean) and needs serde derive
# for the response DTO. Dev-only: leaf-web's production deps stay leaf-core + http.
leaf-serde.workspace = true
serde = { workspace = true }
