[package]
name = "leaf-web"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
# leaf-web is the ABSTRACTION crate (leaf-core only, like leaf-cache/leaf-tx
# define their concern traits). It names NO HTTP-server library — hyper/tower/
# axum live exclusively in the leaf-web-hyper backend crate (Stage 3).
leaf-core.workspace = true
# The thin stereotype macros — leaf-web's own beans dogfood them: `ServerProperties` is a
# `#[config_properties]` `@ConfigurationProperties` bean, and the `WebServerRunner` is a
# `#[runner]` whose `Runner::run` is written via `#[async_impl]`. No backend library here:
# leaf-macros -> leaf-codegen -> leaf-core (no cycle), exactly like leaf-cache/leaf-tx
# depend on leaf-macros for their auto-config beans.
leaf-macros.workspace = true
# Neutral, server-agnostic HTTP value vocabulary (Method/StatusCode/HeaderMap/
# Uri) — the ecosystem standard hyper/axum/tonic all build on; NOT server internals.
http.workspace = true
# The body carrier — a cheaply-cloneable byte buffer at the request/response edge.
bytes.workspace = true
# The object-safety boundary for `HttpMessageConverter`: it lets a converter be a
# `dyn` bean (serialize `&dyn erased_serde::Serialize`, yield a `dyn Deserializer`)
# with no generic method on the trait object. NOT a serde adoption into the abstraction
# surface — leaf-web names no serde data format; the JSON impl lives in leaf-serde. This
# is the serialization analogue of the neutral `http` value-vocabulary exception.
erased-serde.workspace = true
# The serde DATA-MODEL trait (`serde::de::DeserializeOwned`) — NOT a data format — the
# `Json<T>` body extraction's bound: `FromRequestParts for Json<T>` deserializes the body
# through the INJECTED `HttpMessageConverter` (which owns the concrete format, e.g.
# serde_json in leaf-serde) by running `erased_serde::deserialize::<T>` over the
# converter-lent deserializer. leaf-web names the serde data MODEL (the same boundary
# `erased-serde` already crosses) but no serde FORMAT — no serde_json / wire format here.
serde.workspace = true
# A PURE serde data format (NOT a transport backend) for the `Query<T>` extractor: it
# deserializes the request's `?key=val&..` query string into an arbitrary `Deserialize`
# target and percent-decodes keys+values. Unlike the body (whose wire format rides the
# injected `HttpMessageConverter`), the query format is FIXED by the URL grammar
# (`application/x-www-form-urlencoded`), so there is nothing to negotiate and naming it
# here is the same exception the neutral `http`/`erased-serde` vocabulary already takes —
# it is a wire DATA FORMAT, not an HTTP server (hyper/tower/axum stay in leaf-web-hyper).
serde_urlencoded.workspace = true

[features]
# The in-memory `MockServer` test harness (`src/testing.rs`). Gated so it is never
# production surface; leaf-web's own integration tests enable it via the self
# dev-dependency below (`leaf-web = { path = ".", features = ["testing"] }`), the
# canonical Cargo idiom for a package to compile its own test-only API into its
# integration-test crates. External consumers opt in with `features = ["testing"]`.
testing = []

[dev-dependencies]
# A minimal `block_on` to drive the async filter chain in unit tests — no runtime.
futures.workspace = true
# The DI-assembly proof (`tests/dispatch_through_mock.rs`): leaf-boot's cold-pass
# `App::from_slices` lifts the test's macro-emitted `#[component]`/`#[bean]` seeds,
# freezes an engine, and the test resolves `Vec<Ref<dyn Route>>`/`WebFilter`/
# `ControlAdvice` by collection + by-trait injection — the same path the Stage-3
# `WebServerRunner` will use. Dev-only: leaf-web's production deps stay leaf-core + http.
leaf-boot.workspace = true
# Self dev-dependency with the `testing` feature ON, so the integration tests (which
# compile leaf-web as a normal dependency, where `cfg(test)` is off) still see the
# `MockServer` harness. The standard Cargo idiom for a test-only public surface.
leaf-web = { path = ".", features = ["testing"] }
# The Task-9 controller-codegen proof (`tests/controller_routes.rs`) boots a real
# `#[rest_controller]` whose generated `Route` beans serialize returns through the JSON
# `HttpMessageConverter` (`leaf-serde`'s `JsonConverter` bean) and needs serde derive
# for the response DTO. Dev-only: leaf-web's production deps stay leaf-core + http.
leaf-serde.workspace = true
# The `FromRequestParts` converter-aware extraction unit tests drive a `Json<T>` body
# through a JSON `HttpMessageConverter` test double — they need a serde data format to
# back the test converter. Dev-only: leaf-web's PRODUCTION deps name no serde format (the
# `Json<T>` extraction's data model is `serde` the trait via the injected converter; the
# concrete format lives in `leaf-serde`).
serde_json = { workspace = true }
