[package]
name = "hello"
version.workspace = true
edition.workspace = true
license.workspace = true
publish = false

# THE COMPLETION PROOF (phase3/03 TOPOLOGY "Starters & BOM", "the blessed path"):
# a real binary application that depends on the `leaf` UMBRELLA ALONE. EXACTLY ONE
# leaf dependency — no `leaf-*` internal crate, no `linkme`, no `tokio` (the umbrella
# provides the runtime). `features = ["redis"]` dep-pulls the redis CAPABILITY
# starter into the force-link / ExpectedManifest participating set, so the Redis
# auto-config PARTICIPATES (and backs off to / coexists with the in-memory cache).
[dependencies]
leaf = { path = "../../crates/leaf", features = ["redis"] }

# Mirror the umbrella's capability features so the BINARY-CRATE `leaf::force_link!()`
# shim's `#[cfg(feature = "redis")]` gate (checked in THIS crate's feature namespace)
# matches the enabled capability — the binary-originated anti-DCE anchor (the umbrella
# ALSO force-links redis itself, so this is the belt-and-suspenders half). `redis` is
# default so `cargo run -p hello` activates it.
[features]
default = ["redis"]
redis = ["leaf/redis"]
web = ["leaf/web"]
