[package]
name = "storefront"
version.workspace = true
edition.workspace = true
license.workspace = true
publish = false

# An umbrella-only demo: the `leaf` dependency is the framework surface (no internal
# `leaf-*` crate, no `linkme`, no `tokio`). `features = ["redis"]` pulls the redis
# capability into the force-link / ExpectedManifest set, so its auto-config participates
# and backs off to the in-memory cache. `serde` is the data-format vocabulary a JSON web
# app owns (the request/response DTOs the `#[rest_controller]` serialize) — the one
# non-leaf runtime dependency, the same shape the umbrella web proof takes.
[dependencies]
leaf = { path = "../../crates/leaf", features = ["redis"] }
serde = { version = "1", features = ["derive"] }
# The gRPC server-stream builds a `futures::stream::iter` for the `Streaming<Product>`
# carrier; the umbrella surface exposes `leaf_core::BoxStream` (the type) but not a stream
# constructor, so the dogfood names `futures` directly. Gated behind the `grpc` capability.
futures = { version = "0.3", optional = true }

# Mirror the umbrella's capability features so the binary-crate `leaf::force_link!()`
# shim's `#[cfg(feature = "redis")]` gate (checked in THIS crate's namespace) matches.
[features]
default = ["redis", "web", "grpc"]
redis = ["leaf/redis"]
web = ["leaf/web"]
# The gRPC capability (passthrough to `leaf/grpc`): the storefront serves its catalog
# domain over gRPC on the SAME embedded server, alongside the `web` HTTP surface. Pulls
# `futures` for the server-stream's `Streaming<Product>` constructor.
grpc = ["leaf/grpc", "dep:futures"]

# The proto compiler, present so build.rs can compile catalog.proto (the leaf server trait
# + path/descriptor module). protox is pure-Rust — NO protoc system binary. BUILD-only.
[build-dependencies]
leaf-grpc-build = { path = "../../crates/leaf-grpc-build", version = "0.1.0" }

# The `web`-feature REST proof (`tests/http.rs`) boots the storefront on a dedicated
# thread and drives real HTTP through it with a `reqwest` client, asserting JSON bodies
# parsed via `serde_json` — the standard "serve on an ephemeral port and probe it"
# integration shape the leaf-web-hyper auto-config test uses.
[dev-dependencies]
tokio = { version = "1", features = ["rt-multi-thread", "macros", "net", "time"] }
reqwest = { version = "0.13", default-features = false, features = ["json"] }
serde_json = "1"
